sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:11: error: not found: value fin
			fin -= 1
                        ^AlgCocktailSort2:18: error: not found: value fin
			fin += 1
                        ^